--- a/AdvanceChat/AdvanceChat/appsettings.json
+++ b/AdvanceChat/AdvanceChat/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database='AdvanceChat';User Id='root';password='Asus@kailash'"
+    "DefaultConnection": "Server=**********;Database='*********';User Id='*******';password='************'"
   }
 }
